Improved login window

--- a/Bulk_Club/login.ui
+++ b/Bulk_Club/login.ui
@@ -57,6 +57,9 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="echoMode">
+    <enum>QLineEdit::Password</enum>
+   </property>
   </widget>
   <widget class="QLabel" name="textUsername">
    <property name="geometry">
